<resources>
    <string name="app_name">MasterApp</string>
    <string name="scan_connect">重新扫描</string>
    <string name="Meet_any_of_the_conditions">满足任一条件时</string>
    <string name="did_not_add_conditions">未添加条件</string>
    <string name="will_meet_the_following_results">将满足以下结果</string>
    <string name="no_task_added">未添加任务</string>
    <string name="induction_cook">电磁炉：</string>
    <string name="intelligent_pot">智能锅</string>
    <string name="download">下载</string>
    <string name="prompt_information">提示信息</string>
    <string name="Compression">压  缩</string>
    <string name="Decompression">解  压</string>
    <string name="in_search">搜索中... </string>
    <string name="start_searching">开始搜索</string>
    <string name="equipment">设备</string>
    <string name="scene">场景</string>
    <string name="menu">菜谱</string>
    <string name="add_device">添加设备</string>
    <string name="device_management">设备管理</string>
    <string name="add_sence">添加场景</string>
    <string name="execution_log">执行日志</string>
    <string name="open_1">开1</string>
    <string name="open_2">开2</string>
    <string name="open_3">开3</string>
    <string name="open_4">开4</string>
    <string name="close_1">关1</string>
    <string name="close_2">关2</string>
    <string name="close_3">关3</string>
    <string name="close_4">关4</string>
    <string name="input_sence_name">请输入场景名称</string>
    <string name="send_message_to_phone">发送通知到手机</string>
    <string name="began_to_experience">开始体验</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="written_words">文字</string>
    <string name="open">开机</string>
    <string name="close">关机</string>
    <string name="fast_wind">快风</string>
    <string name="slow_wind">慢风</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="reset_password">重置密码</string>
    <string name="register_user">注册用户</string>
    <string name="login">登录</string>
    <string name="login_ing">登录中</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="have_account_to_login">已有账户，马上登录</string>
    <string name="regiter">注册</string>
    <string name="register_ing">注册中</string>
    <string name="guangdong_master_gmri">广东万事泰集团研究所</string>
    <string name="intelligent_intelligent_itchen">有意思的智能厨房</string>
    <string name="skip">跳过</string>
    <string name="send_800w">发送800w</string>
    <string name="get_temp_data_and_print">获取温度数据，并打印</string>
    <string name="gears_1">1档</string>
    <string name="gears_2">2档</string>
    <string name="gears_3">3档</string>
    <string name="gears_4">4档</string>
    <string name="gears_5">5档</string>
    <string name="gears_6">6档</string>
    <string name="gears_7">7档</string>
    <string name="debug_model">调试模式</string>
    <string name="print_debug_info">打印调试信息：</string>
    <string name="sirloin">西冷牛扒</string>
    <string name="stewed_pear_with_white_fungus_and_sweet_scented_osmanthus">桂花银耳炖雪梨</string>
    <string name="close_light">关灯</string>
    <string name="open_light">开灯</string>
    <string name="sence_is_empty">场景为空</string>
    <string name="brother_please_add_sence">兄弟，请添加场景!</string>
    <string name="open_sence">开启场景</string>
    <string name="save_sence">保存场景</string>
    <string name="empty">空</string>
    <string name="conditions_for_execution">执行条件</string>
    <string name="sence_name">场景名称</string>
    <string name="edit_name">[编辑名称]</string>
    <string name="agasin">重复</string>
    <string name="only_implement_one">只执行一次</string>
    <string name="select_can_connect_device">请选择可接入的设备</string>
    <string name="user_info">个人用户信息</string>
    <string name="wechar_pager">微信页面</string>
    <string name="select_device_Model">选择设备型号</string>
    <string name="please_input_device_password">请输入设备密码</string>
    <string name="submit">提交</string>
    <string name="authentication_password">密码验证</string>
    <string name="authentication_success">验证成功</string>
    <string name="password_error">密码错误</string>
    <string name="get_data_error">获取数据出错</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="authentication_failed">验证失败</string>
    <string name="scan_device">扫描设备</string>
    <string name="scanning">扫描中</string>
    <string name="rename">重新命名</string>
    <string name="delete_device">删除设备</string>
    <string name="device_info">设备信息</string>
    <string name="firnware_info">固件信息</string>
    <string name="request_data">请求数据</string>
    <string name="request_configure">请求配置</string>
    <string name="input_new_device_name">输入新设备名</string>
    <string name="device_name_is_exists_pelase_retry">设备名已存在,请重试</string>
    <string name="successful_modification">修改成功</string>
    <string name="failed_modification">修改失败</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="every_day">每天</string>
    <string name="working_day">工作日</string>
    <string name="custom">自定义</string>
    <string name="user_name_and_password_is_not_null">用户名或密码不能为空</string>
    <string name="user_name_less_than_six_byte">用户名不能少于6位</string>
    <string name="password_less_than_six_byte">密码不能少于6位</string>
    <string name="user_name_alrealy_exists">用户名已存在</string>
    <string name="register_success_ready_into">注册成功，马上进入</string>
    <string name="user_account_is_empty">账户不存在</string>
    <string name="login_success">登陆成功</string>
    <string name="login_faile">登录失败</string>
    <string name="again_press_exit_program">再次点击退出程序</string>
    <string name="connect_alread_disconnected_please_again_connect">连接已断开，请重新连接</string>
    <string name="beging_download">开始下载...，</string>
    <string name="beging_install">开始安装</string>
    <string name="device_added_success">设备添加成功</string>
    <string name="device_added_failed">设备添加成功</string>
    <string name="network_connect_error">网络连接错误</string>
    <string name="not_discove_bridge_device">没有发现桥设备</string>
    <string name="reset_bluetooth">重置蓝牙</string>
    <string name="prompt_not_discove_bridge_device_can_reset_buletooth">提示 ：没有发现桥设备,可能需要重置蓝牙。</string>
    <string name="reset">重  置</string>
    <string name="later_handle">稍后处理</string>
    <string name="not_discove_can_connect_device">没有发现可连接设备</string>
    <string name="not_discove_can_connect_device_please_reset_buletooth">  没有发现可连接设备,请重置蓝牙。</string>
    <string name="config_device_can_conn">确认设备处于等待连接状态</string>
    <string name="search_and_conn_device">搜索并连接设备</string>
    <string name="input_wifi_pwd_to_conn_device">请输入wifi密码，连接您的智能设备</string>
    <string name="select_device_type"><u>选择设备类型：</u></string>
    <string name="choose_wifi_list_title">请选择可用的Wi-Fi网络</string>
    <string name="softPsw_hint">请输入Wi-Fi密码</string>
    <string name="next">下一步</string>
    <string name="choose_mode_title">模组类型选择</string>
    <string name="device_conn_course">请接通电源，长按[KEY2]直到[RGB LED]亮绿灯</string>
    <string name="finished">已完成上述操作</string>
    <string name="please_select_mode">请选择模组类型</string>
    <string name="please_select_wifi">请先选择可用的wifi</string>
    <string name="Please_input_wifi_pwd">请输入wifi密码</string>
    <string name="no_devices">暂无设备，请添加</string>
    <string name="havenot_device">没有设备</string>
    <string name="my_device">我的设备</string>
    <string name="bound_divices">已绑定设备</string>
    <string name="found_devices">发现新设备</string>
    <string name="offline_devices">离线设备</string>
    <string name="data_error">数据出错</string>
    <string name="network_error">网络出错</string>
    <string name="remove_device">确定要移除设备？</string>
    <string name="device_removeing">移除设备中...</string>
    <string name="cancellation_accounts">确定注销账户？</string>
    <string name="yes_exit">确定退出</string>
    <string name="open_off_line_model">开启离线模式？</string>
    <string name="close_off_line_model">关闭离线模式？</string>
    <string name="prompt">提示</string>
    <string name="close_debug_model">关闭调试模式</string>
    <string name="open_debug_model">开启调试模式</string>
    <string name="new_add_sence">新增场景</string>
    <string name="save">保存</string>
    <string name="timer">定时</string>
    <string name="exit_modify_is_modify">退出后修改将丢失，是否确定退出？</string>
    <string name="please_add_task">请添加任务</string>
    <string name="please_add_condition">请添加条件</string>
    <string name="set_sence_name">设置场景名称</string>
    <string name="sence_name_existence_pelase_retry">场景名已存在，请重试</string>
    <string name="bulid_failed">创建失败</string>
    <string name="being_created">正在创建中</string>
    <string name="build_success">创建成功</string>
    <string name="delay">延时</string>
    <string name="mm">分</string>
    <string name="ss">秒</string>
    <string name="device_linkage">设备联动</string>
    <string name="start_condition">启动条件</string>
    <string name="implement_task">执行任务</string>
    <string name="it_man_in_development">程序猿正努力加班开发中...</string>
    <string name="ban_click">禁止点击</string>
    <string name="select_function">选择功能</string>
    <string name="less_than">小于</string>
    <string name="more_than">大于</string>
    <string name="configu">设置</string>
    <string name="parameter">参数</string>
    <string name="data_is_empth">数据为空</string>
    <string name="ss_later">秒后</string>
    <string name="device_not_exists">设备不存在</string>
    <string name="modify_sence_name">修改场景名称</string>
    <string name="close_sence">关闭场景</string>
    <string name="not_save">不保存</string>
    <string name="config_delete_Selected">确定删除选中的</string>
    <string name="various_sence">项场景</string>
    <string name="already_close">已关闭</string>
    <string name="already_open">已开启</string>
    <string name="is_being_saved">正在保存中</string>
    <string name="is_being_delete">正在删除中</string>
    <string name="delete_success">删除成功</string>
    <string name="modify_failed">修改失败</string>
    <string name="remove_bound">解除绑定</string>
    <string name="lan">局域网</string>
    <string name="no_lan">远程</string>
    <string name="unbind">未绑定</string>
    <string name="loadingtext">处理中，请稍等...</string>
    <string name="qr_code">QR Code</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="apply">Apply</string>
    <string name="add_group">Add Group</string>
    <string name="menu_rename">重命名</string>
    <string name="menu_delete">删除</string>
    <string name="menu_info">固件信息</string>
    <string name="menu_models_supported">Models supported</string>
    <string name="menu_get_data">请求数据</string>
    <string name="menu_device_info">设备信息</string>
    <string name="network_phrase">输入密码</string>
    <string name="authorise">Authorise Devices</string>
    <string name="ttl">Time to live (TTL):</string>
    <string name="key_required">Enter a network phrase and press OK to continue</string>
    <string name="unknown">unknown</string>
    <string name="associating">搜索设备</string>
    <string name="association_fail">Device association failed</string>
    <string name="short_code_prompt">Enter short code</string>
    <string name="short_code_match_fail">Short code doesn\'t match UUID</string>
    <string name="shortcode_invalid">Invalid short code</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="group_update">Sending group update</string>
    <string name="confirm_remove">确定删除设备?</string>
    <string name="confirm_remove_local">设备不在线，是否在本地删除?</string>
    <string name="removing">Removing device</string>
    <string name="getting_data">重新获取设备接口</string>
    <string name="enter_group_name">Enter name for group</string>
    <string name="waiting_for_response">等待请求</string>
    <string name="firmware_version_is">固件版本是</string>
</resources>