<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedede"
    >

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/failsoft"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_wifi_pwd_to_conn_device"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/deviceTypeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/select_device_type"
            android:textColor="@color/text_blue"
            style="?android:attr/textViewStyle"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/wifi_icon" />

        <EditText
            android:id="@+id/etSSID"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:focusable="false"
            android:hint="@string/choose_wifi_list_title"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imgWiFiList"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:button="@null"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingLeft="3dp"
            android:paddingRight="9dp"
            android:paddingTop="5dp"
            android:src="@drawable/button_more" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/etPsw"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/softPsw_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp"
            android:typeface="normal" />

        <CheckBox
            android:id="@+id/cbLaws"
            android:layout_width="25dp"
            android:layout_height="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/checkbox_laws_selector"
            android:button="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="300dp"
        android:layout_marginLeft="300dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnNext"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="#f57c00"
            android:textColor="@android:color/white"
            android:text="@string/next" />
    </LinearLayout>


</LinearLayout>
